Correct case-issue

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 
 <center> <div class="grid-MAIN">
             <div class="grid-container">
-                <div class="grid-item"><button id="C" class="button button1" data-hover="Do"> <img id="C" src="images/C.png"/></button></div>
+                <div class="grid-item"><button id="C" class="button button1" data-hover="Do"> <img id="C" src="images/c.png"/></button></div>
                 <div class="grid-item"><button id="D" class="button button2" data-hover="Re"> <img id="D" src="images/D.png"/> </button></div>
                 <div class="grid-item"><button id="E" class="button button3" data-hover="Mi"> <img id="E" src="images/E.png"/></button></div>
                 <div class="grid-item"> <button id="F" class="button button4" data-hover="Fa"> <img id="F" src="images/F.png"/></button></div>
                 <div class="grid-item"><button id="G" class="button button5" data-hover="Sol"> <img id="G" src="images/G.png"/></button></div>
                 <div class="grid-item"><button id="A" class="button button6" data-hover="La"> <img id="A" src="images/A.png"/></button></div>
                 <div class="grid-item"><button id="B" class="button button7" data-hover="Ti"> <img id="B" src="images/B.png"/></button></div>
-                <div class="grid-item"><button id="Cs" class="button button1" data-hover="Do"> <img id="Cs" src="images/C.png"/></button></div>
+                <div class="grid-item"><button id="Cs" class="button button1" data-hover="Do"> <img id="Cs" src="images/c.png"/></button></div>
             </div>
    
         </div></center>
